fixed alignment in mobile view

--- a/style.css
+++ b/style.css
@@ -81,4 +81,11 @@ background: linear-gradient(90deg, rgba(26,26,29,1) 20%, rgba(9,11,46,1) 50%, rg
     top: 49%;
 }
   }
+
+  @media only screen and (max-width: 450px) {
+    .logo {
+        height: 6rem;
+        width: 17rem;
+    }
+  }
   
